<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="12dp"
        android:background="@color/bktint1"
        tools:context=".fragments.EditFragment">

        <TextView
            android:id="@+id/editNoteHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif"
            android:textSize="35sp"
            android:gravity="center"
            android:text="@string/edit_task_details"
            android:textStyle="bold"
            android:textColor="@color/primary"
             />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="82dp"
            android:fontFamily="sans-serif"
            android:text="Task Name"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="23sp" />
        <EditText
            android:id="@+id/editNoteTitle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/enter_the_title"
            android:layout_marginTop="50dp"
            android:padding="12dp"
            android:textSize="20sp"
            android:layout_below="@id/editNoteHeading"
            android:background="@drawable/border"

            android:maxLines="1"
            android:fontFamily="sans-serif"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="190dp"
            android:fontFamily="sans-serif"
            android:text="Your Task Description"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="23sp" />
        <EditText
            android:id="@+id/editNoteDesc"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:hint="@string/enter_the_description"
            android:gravity="top"
            android:padding="12dp"
            android:textSize="18sp"
            android:fontFamily="sans-serif"
            android:background="@drawable/border"
            android:layout_below="@id/editNoteTitle"
            android:layout_marginTop="62dp" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/editNoteFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:backgroundTint="@color/primary"
            android:tintMode="@color/white"
            android:src="@drawable/done_icon"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:contentDescription="editFab" />

    </RelativeLayout>
</layout>